--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,30 +11,35 @@ jobs:
         go: ["1.20.x"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          repository: ggerganov/whisper.cpp
+          ref: v1.3.0
+          path: whisper
       - uses: WillAbides/setup-go-faster@v1.7.0
         with:
           go-version: ${{ matrix.go }}
       - run: |
-          git clone https://github.com/ggerganov/whisper.cpp.git /whisper
-          cd /whisper/bindings/go
+          cd whisper/bindings/go
           make whisper
       # we don't have any tests yet
       # - run: "go test ./..."
       #  env:
-      #    C_INCLUDE_PATH: "/whsiper"
+      #    C_INCLUDE_PATH: "/whisper"
       #    LIBRRARY_PATH: "/whisper"
       - run: "go vet ./..."
         env:
-          C_INCLUDE_PATH: "/whsiper"
-          LIBRRARY_PATH: "/whisper"
+          C_INCLUDE_PATH: "whisper"
+          LIBRRARY_PATH: "whisper"
       - uses: dominikh/staticcheck-action@v1.2.0
         with:
           version: "2022.1.1"
           install-go: false
           cache-key: ${{ matrix.go }}
         env:
-          C_INCLUDE_PATH: "/whsiper"
-          LIBRRARY_PATH: "/whisper"
+          C_INCLUDE_PATH: "whisper"
+          LIBRRARY_PATH: "whisper"
