--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,13 +33,13 @@ jobs:
       #    LIBRRARY_PATH: "/whisper"
       - run: "go vet ./..."
         env:
-          C_INCLUDE_PATH: "whisper"
-          LIBRRARY_PATH: "whisper"
+          C_INCLUDE_PATH: "./whisper"
+          LIBRRARY_PATH: "./whisper"
       - uses: dominikh/staticcheck-action@v1.2.0
         with:
           version: "2022.1.1"
           install-go: false
           cache-key: ${{ matrix.go }}
         env:
-          C_INCLUDE_PATH: "whisper"
-          LIBRRARY_PATH: "whisper"
+          C_INCLUDE_PATH: "./whisper"
+          LIBRRARY_PATH: "./whisper"
