--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,11 +35,11 @@ jobs:
         env:
           C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
           LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
-      - uses: dominikh/staticcheck-action@v1.2.0
+      - uses: dominikh/staticcheck-action@v1.3.0
         with:
           version: "2022.1.1"
           install-go: false
           cache-key: ${{ matrix.go }}
         env:
-          C_INCLUDE_PATH: "./whisper"
-          LIBRRARY_PATH: "./whisper"
+          C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
+          LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
