--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,11 +35,9 @@ jobs:
         env:
           C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
           LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
-      - uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          version: "2022.1.1"
-          install-go: false
-          cache-key: ${{ matrix.go }}
+      - run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          staticcheck ./...
         env:
           C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
           LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
