--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-latest", "ubuntu-latest", "macOS-latest"]
+        os: ["ubuntu-latest", "macOS-latest"]
         go: ["1.20.x"]
     runs-on: ${{ matrix.os }}
     steps:
@@ -20,7 +20,7 @@ jobs:
           repository: ggerganov/whisper.cpp
           ref: v1.3.0
           path: whisper
-      - uses: WillAbides/setup-go-faster@v1.7.0
+      - uses: WillAbides/setup-go-faster@v1.8.0
         with:
           go-version: ${{ matrix.go }}
       - run: |
@@ -33,11 +33,11 @@ jobs:
       #    LIBRRARY_PATH: "/whisper"
       - run: "go vet ./..."
         env:
-          C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
-          LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
+          C_INCLUDE_PATH: "${GITHUB_WORKSPACE}/whisper"
+          LIBRRARY_PATH: "${GITHUB_WORKSPACE}/whisper"
       - run: |
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
         env:
-          C_INCLUDE_PATH: "/home/runner/work/blisper/blisper/whisper"
-          LIBRRARY_PATH: "/home/runner/work/blisper/blisper/whisper"
+          C_INCLUDE_PATH: "${GITHUB_WORKSPACE}/whisper"
+          LIBRRARY_PATH: "${GITHUB_WORKSPACE}/whisper"
